[package]
name = "sif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
pallas = { git = "ssh://git@github.com/Sbcdn/pallas.git", branch="sbcd-txmonitor"}
#pallas-miniprotocols = { path = "../pallas_maestro/pallas-miniprotocols" }
#pallas-codec = { version = "0.11.0-alpha.0",  path = "../pallas_maestro/pallas-codec/" }
#pallas-multiplexer = { version = "0.11.0-alpha.0",  path = "../pallas_maestro/pallas-multiplexer/" }
net2 = "0.2.37"
env_logger = "0.9.0"
hex = "0.4.3"
log = "0.4.16"
# HTTP Requests
minreq = { version="2.6.0", features= ["json-using-serde"] }
http = "0.2.6"
cardano-serialization-lib = "10.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
lazy_static = "1.4.0" 